# helios-signal

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml  requirements.txt
julia/: fft_analysis.jl  filter_design.jl  wavelet_packet.jl  wavelets.jl
octave/: control_systems.m  filter_design.m  signal_generation.m
paper/: helios_paper.tex
r/: continuous_processes.R  markov_analysis.R  time_series.R
results/dsp/: fft_benchmarks.csv  filter_responses.csv  wavelet_denoising.csv
results/helios_spectrum/: causal_graph.json  comparison_table.csv
results/helios_spectrum/audio/: causal_graph.json  comparison_table.csv  summary.json
results/helios_spectrum/ecg/: causal_graph.json  comparison_table.csv  summary.json
results/helios_spectrum/financial/: causal_graph.json  comparison_table.csv  summary.json
results/helios_spectrum/seismic/: causal_graph.json  comparison_table.csv  summary.json
results/information_theory/: channel_coding_ber.csv  compression_comparison.csv  entropy_analysis.csv  rate_distortion.csv
results/octave/: filter_designs.csv  generated_signals.csv
results/stochastic/: continuous_processes.csv  kalman_tracking.csv  markov_analysis.csv  time_series_forecast.csv
scripts/: run_experiments.py
src/: HELIOSDSP.jl
src/helios/: __init__.py  experiments.py  runtime.py
src/helios/dsp/: __init__.py  core.py  dsp_bridge.py
src/helios/helios_spectrum/: __init__.py  pipeline.py
src/helios/information_theory/: __init__.py  core.py  neural_channel_coding.py
src/helios/octave/: __init__.py  (+1 more)
tests/: test_helios.py
(+4 files in other folders)
